# wasm-test

./: Cargo.toml  README.md  flake.nix
examples/simple/: Cargo.toml
examples/simple/.cargo/: config.toml
examples/simple/src/: main.rs
examples/simple/tests/: big.rs  print.rs  will_fail.rs
macro/: Cargo.toml
macro/src/: lib.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs  runner.rs
src/: _lib.rs  lib.rs  main.rs  runtime.rs
