[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/simple",
    "runner",
    "macro",
]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-test-macro = {path = "macro"}

[dependencies]
serde = {version = "1.0.171", features=["derive"]}
serde_json = "1.0.100"
