[package]
name = "wasm-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ciborium = "0.2.1"
colored = "2.0.0"
serde = {version = "1.0.171", features=["derive"]}
serde_json = "1.0.100"
wasmer = {version="4.0.0", default-features=false, features=["singlepass"]}
wasmer-types = "4.0.0"

[[bin]]
name = "wasm-test-run"
path = "src/main.rs"
