[package]
name = "wasm-test-runner"
version = "0.1.0"
edition = "2021"
author = "rambip"
description = "a binary used to create unit-tests in your wasm files"
license = "MIT"
categories = ["wasm", "web-programming", "development-tools::testing"]
keywords = ["testing", "webassembly", "yew"]
repository = "https://github.com/rambip/wasm-test"


[dependencies]
colored = "2.0.0"
serde = {version = "1.0.171", features=["derive"]}
serde_json = "1.0.100"
wasmer = {version="4.0.0", default-features=false, features=["singlepass"]}
